--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,3 +1,19 @@
+body {
+  max-width:960px;
+}
+
+#external-links {
+  display:inline-block;
+  width:20%;
+  vertical-align:top;
+}
+
+.main {
+  display:inline-block;
+  width:75%;
+  padding-left:10px;
+}
+
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
